[package]
name = "ldk-bitcoin-rpc-example"
version = "0.1.0"
authors = ["Conor Okus <conor@squarecrypto.org>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.0.104" }
lightning-block-sync = { version = "0.0.104", features = ["rpc-client"]}
lightning-net-tokio = { version = "0.0.104" }

base64 = { version = "0.13.0" }
bitcoin = { version = "0.27.1" }
bitcoin-bech32 = { version = "0.12.1" }
bech32 = { version = "0.8.1" }
hex = { version = "0.4.3" }

serde_json = { version = "1.0.73" }
tokio = { version = "1.15.0", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"


